# env_canada

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  python-app.yml  python-publish.yml
env_canada/: __init__.py  constants.py  ec_alerts.py  ec_aqhi.py  ec_historical.py  ec_hydro.py  ec_map.py  ec_weather.py
tests/: conftest.py  ec_aqhi_test.py  ec_historical_test.py  ec_hydrop_test.py  ec_map_test.py  ec_radar_test.py  ec_weather_test.py
tests/__snapshots__/: ec_map_test.ambr  ec_weather_test.ambr
tests/cassettes/ec_aqhi_test/: test_get_aqhi_regions.yaml  test_update.yaml
tests/cassettes/ec_historical_test/: test_historical_number_values[10476F0-daily-startdate2-enddate2].yaml  test_historical_number_values[1096453-daily-startdate0-enddate0].yaml  test_historical_number_values[1096453-daily-startdate1-enddate1].yaml  test_historical_number_values[1096453-daily-startdate3-enddate3].yaml  test_historical_number_values[1096453-daily-startdate4-enddate4].yaml  test_historical_number_values[1096453-hourly-startdate5-enddate5].yaml  test_update.yaml
tests/cassettes/ec_hydrop_test/: test_echydro[init_parameters0].yaml  test_get_hydro_sites.yaml  test_update.yaml
tests/cassettes/ec_map_test/: TestECMapCaching.test_basemap_caching_behavior.yaml  TestECMapCaching.test_layer_image_caching.yaml  TestECMapImageGeneration.test_get_loop.yaml  TestECMapImageGeneration.test_single_layer_generation[init_parameters0].yaml  TestECMapImageGeneration.test_single_layer_generation[init_parameters1].yaml  TestECMapImageGeneration.test_single_layer_generation[init_parameters2].yaml
tests/cassettes/ec_weather_test/: test_get_ec_sites.yaml  test_update_ec_weather.yaml
